# yaicli

./: .bumpversion.cfg  404.html  CHANGELOG.md  CLAUDE.md  Justfile  README.md  cliff.toml  index.html  llmcli.py  mkdocs.yml  pyproject.toml  shellai.py  sitemap.xml  tox.ini  yaicli.py  yek.yaml
.github/workflows/: deploy-docs.yml  docs.yml  publish.yml
advanced/debugging/: index.html
advanced/history/: index.html
advanced/prompts/: index.html
artwork/: chat.tape  chat_demo.cast
changelog/: index.html
contributing/: index.html
dev/add-provider/: index.html
dev/architecture/: index.html
dev/debug-cli/: index.html
docs/: changelog.md  contributing.md  faq.md  getting-started.md  index.md  install.md  installation.md
docs/api/: tools.md  (+2 more)
faq/: index.html
getting-started/: index.html
install/: index.html
installation/: index.html
plans/: 01-exclude-params-feature.md  02-context-management-plan.md  03-path-completion-plan.md  04-minimax-interleaved-thinking.md
search/: search_index.json
tests/: conftest.py  test_api.py  test_chat_manage.py  test_cli.py  test_command_handler.py  test_completer.py  test_config.py  test_context.py  test_entry.py  test_event_loop.py  test_filter_command.py  test_history.py  test_image.py  test_os_shell_detection.py  test_printer.py  test_role.py  test_run_smoke.py
yaicli/: api.py  chat.py  chat_manager.py  cli.py  client.py  cmd_handler.py  completer.py  config.py  console.py  const.py  context.py  entry.py  function.py  function_schema.py  image.py  printer.py  role.py  roles.py  schemas.py  tools.py  utils.py
(+177 files in other folders)
